--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "The server for a private messanging service",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist",
+    "build": "npm-run-all clean build:src build:tests",
+    "build:src": "babel src -d lib/src --copy-files",
+    "build:tests": "babel tests -d lib/tests",
+    "clean": "rimraf lib",
     "start": "forever -c 'nodemon --exitcrash --exec babel-node' src/app.js",
-    "serve": "node dist/app.js"
+    "serve": "node lib/src/app.js",
+    "test": "npm-run-all clean build test:mocha",
+    "test:mocha": "find ./lib/tests/* -name '*_test.js' | xargs mocha --exit -R spec"
   },
   "repository": {
     "type": "git",
@@ -28,8 +32,12 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-plugin-inline-dotenv": "^1.2.0",
+    "chai": "^4.2.0",
     "dotenv": "^6.2.0",
     "forever": "^0.15.3",
-    "nodemon": "^1.18.9"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.2"
   }
 }
