--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "supertest": "^3.3.0"
   }
 }
