Added eslint to project

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:src": "babel src -d lib/src --copy-files",
     "build:tests": "babel tests -d lib/tests",
     "clean": "rimraf lib",
+    "lint":"eslint src/**/*.js",
+    "lint:fix":"eslint --fix src/**/*.js",
     "start": "forever -c 'nodemon --exitcrash --exec babel-node' src/app.js",
     "serve": "node lib/src/app.js",
     "test": "npm-run-all clean build test:mocha",
@@ -35,6 +37,9 @@
     "babel-plugin-inline-dotenv": "^1.2.0",
     "chai": "^4.2.0",
     "dotenv": "^6.2.0",
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "forever": "^0.15.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
