--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:src": "babel src -d lib/src --copy-files",
     "build:tests": "babel tests -d lib/tests",
     "clean": "rimraf lib",
-    "lint":"eslint src/**/*.js",
-    "lint:fix":"eslint --fix src/**/*.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "start": "forever -c 'nodemon --exitcrash --exec babel-node' src/app.js",
     "serve": "node lib/src/app.js",
     "test": "npm-run-all clean build test:mocha",
@@ -45,6 +45,7 @@
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2",
+    "socket.io-client": "^2.2.0",
     "supertest": "^3.3.0"
   }
 }
